objects/Form_Builder__FormTitanPdfUrl__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Form_Builder__ApiKey__c</fullName>
        <description>Add Api key In order to enable debug mode</description>
        <inlineHelpText>Add Api key In order to enable debug mode</inlineHelpText>
        <label>ApiKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Debug_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Builder__URL__c</fullName>
        <description>This will determine the user specific formtitan url</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>FormTitan Pdf Url</label>
</CustomObject>